--- a/MvcBasic/MvcBasic.vbproj
+++ b/MvcBasic/MvcBasic.vbproj
@@ -51,6 +51,12 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -58,6 +64,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -173,6 +181,8 @@
     <Compile Include="App_Start\BundleConfig.vb" />
     <Compile Include="App_Start\FilterConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
+    <Compile Include="Areas\Member\Controllers\MembersController.vb" />
+    <Compile Include="Areas\Member\MemberAreaRegistration.vb" />
     <Compile Include="Controllers\BeginController.vb" />
     <Compile Include="Controllers\MasterController.vb" />
     <Compile Include="Controllers\TestController.vb" />
@@ -181,8 +191,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\MasterDAO.vb" />
-    <Compile Include="Models\MvcBasicContext.vb" />
-    <Compile Include="Models\MvcBasicInitializer.vb" />
+    <Compile Include="Areas\Member\Models\Member.vb" />
+    <Compile Include="Areas\Member\Models\MemberContext.vb" />
     <Compile Include="Models\User.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -211,6 +221,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Sample.mdf" />
+    <Content Include="App_Data\Sample_log.ldf">
+      <DependentUpon>Sample.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -220,6 +234,12 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Areas\Member\Views\web.config" />
+    <Content Include="Areas\Member\Views\Members\Create.vbhtml" />
+    <Content Include="Areas\Member\Views\Members\Delete.vbhtml" />
+    <Content Include="Areas\Member\Views\Members\Details.vbhtml" />
+    <Content Include="Areas\Member\Views\Members\Edit.vbhtml" />
+    <Content Include="Areas\Member\Views\Members\Index.vbhtml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -237,12 +257,13 @@
     <Content Include="Views\Begin\Show.vbhtml" />
     <Content Include="Views\Home\LogOn.vbhtml" />
     <Content Include="Views\Begin\List.vbhtml" />
-    <Content Include="Views\Home\Menu.vbhtml" />
+    <Content Include="Views\Home\Menu_.vbhtml" />
     <Content Include="Views\Test\TestPage1.vbhtml" />
     <Content Include="Views\Test\TestPage2.vbhtml" />
-    <Content Include="Views\View\Form.vbhtml" />
+    <Content Include="Views\Home\Form.vbhtml" />
     <Content Include="Views\Master\editUser.vbhtml" />
     <Content Include="Views\Master\userMaster.vbhtml" />
+    <Content Include="Views\Home\Menu.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
@@ -268,15 +289,12 @@
     </Content>
     <Content Include="Content\Site.css" />
     <Content Include="Views\_ViewStart.vbhtml" />
-    <Content Include="Views\Home\About.vbhtml" />
-    <Content Include="Views\Home\Contact.vbhtml" />
-    <Content Include="Views\Home\Index.vbhtml" />
     <Content Include="Views\Shared\Error.vbhtml" />
     <Content Include="Views\Shared\_Layout.vbhtml" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="Areas\Member\Views\Shared\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
